カウントダウンDojoCon Japan追加

--- a/_data/countdown.yml
+++ b/_data/countdown.yml
@@ -21,3 +21,9 @@
 - title: '#6 ワークショップ紹介'
   id: Td2WNL28xc0
   date: 2023.08.10
+- title: '#7 CoderDojo屋台紹介'
+  id: bzcAXB7zahA
+  date: 2023.08.17
+
+
+  
