ymlを更新し戻るボタン、次の作品に移るボタンを追加しました。

--- a/_data/exhibition.yml
+++ b/_data/exhibition.yml
@@ -267,3 +267,53 @@
   description: 楽譜は、小学校一年生の鍵盤ハーモニカの教科書を参考にしました。
   URL: https://drive.google.com/file/d/10rsc0l2oFq-6wp4YXUdunKKtB3wUagWx/view?usp=sharing
   path_URL: 25
+
+- title: マイクラ映画「終戦の護衛艦」他一本
+  text: Coderdojo瀬戸のei_0123です。<br>DojoCon初参加で、マイクラの短編映画「終戦の護衛艦」「東海貨物列車ジャック事件」を作ってみました。今回の撮影では、アカウントが二つしかなく、自分一人で作ったので、航空機の操縦や列車の運転などは一人でマウスを２つ操作しています。動画の停止ボタンを押していたら、航空機がどっかに飛んでってしまったこともあります（笑）。<br><br>一作目の「終戦の護衛艦」は、海上自衛隊、航空自衛隊が登場し、終戦間際にタイムスリップするという物語です。<br><br>二作目の「東海貨物列車ジャック事件」では、貨物列車が乗っ取られてしまうという前代未聞の出来事が発生、警察が、鉄道の特徴をうまく引き出して、ジャック犯を止めるという物語です。
+  tag: マインクラフト
+  creator: ei_0123
+  affiliation: 瀬戸
+  img: 26.jpg
+  description: 「終戦の護衛艦」<br>・MC Heli MOD<br><br>「東海貨物列車ジャック事件」<br>・RealTrainMod<br>・東海道新幹線 N700S Pack ver1.0<br>・600V`s Meitetsupackβ<br><br>BGM<br>・フリーBGM DOVA-SYNDROME
+  URL: https://drive.google.com/file/d/1WiXT_w4AKx8gF-cPfIrP-5UnKq3bb8el/view?usp=sharing
+  path_URL: 26
+
+- title: こうちゃんの建築物［屋敷］
+  text: この作品は屋敷をイメージして作った物です<br><br>・こだわりポイント<br><br>桜の木の本数を調節して作りました。<br><br>入り口の門にこだわりました<br><br>門の水辺の橋の丸い部分に凄くこだわりました<br><br>あと蓮の葉の置く位置と小さなドリップリーフの置く場所にこだわりました<br><br>・苦労したところ<br><br>石の道の砂利とか池と池の魚の量の調節が大変でした<br><br>あと庭の草は一つ一つ置きましたのでその作業に時間をとられました<br><br>それと屋根の敷き詰めと床を敷き詰めるのは結構大変でした
+  tag: マインクラフト
+  creator: こうちゃん
+  affiliation: 小平
+  img: 27.jpg
+  description: ストラクチャーブロックで壁を組み立てて、ちょっとでも早く進められるようにようにがんばりました。
+  URL: https://www.youtube.com/watch?v=fJR6u_kQVPY
+  path_URL: 27
+
+- title: FukuyamaCastle祝400歳!
+  text: 昨年のマインクラフトカップ応募作品です。中国ブロック優秀賞を受賞しました。<br>2022年8月に、福山城は築城400年を迎えました。僕たちは、築城当時の福山城をマインクラフト上に再現し、そこに動物と一緒に生活する街を作ろうと思いました。福山市民が大好きな福山城といろんな生き物が共生する未来を表現しました。色とりどりの球の中には多様な生き物がそれぞれに適した環境で暮らしています。<br>福山城作りが一番こだわった点です。当時の単位の1間は約1.8メートルですが、これをマインクラフト上で2メートルとして、本丸、二の丸、三の丸や、櫓や堀、石垣を再現しました。
+  tag: マインクラフト
+  creator: CoderDojo福山大門
+  affiliation: 福山大門
+  img: 28.jpg
+  description: 本丸・二の丸・三の丸や内堀・中堀・山の整地と、天守閣をexcelで作った設計図通りに作るのにminecraftアドオンを作って外部からのコマンドの読み込みをさせました。<br>細かい整地や、壁の作成を行うための始点・終点を設定して、間を埋めるプログラムを作成して、使いました。<br>例えば、石垣のために丸石を埋めたい場所がある場合、埋めたい場所の角に行ってメッセージに「fs 1」と打ち込み、対角線の場所に行って「fs 2」と打ち込み、最後に「fs 3」とすると、間のブロックが丸石になります。
+  URL: https://youtu.be/iAZUIFIzLII
+  path_URL: 28
+
+- title: 『かんづめ食堂』オープン！！
+  text: 『かんづめ食堂』のウェブサイトを作りました。缶詰や非常食を使ったレシピを公開していくウェブサイトです。
+  tag: Webサイト
+  creator: YUZU
+  affiliation: 梅田/西宮
+  img: 29.jpg
+  description: ウェブサイトを企画してHTMLを覚えて、動画編集やAIを使った画像生成など、いろいろなはじめてにチャレンジしました。
+  URL: https://youtu.be/DiLG9r_3tLw
+  path_URL: 29
+
+- title: ビュフォンの針
+  text: ビュフォンの針という、円周率の近似値を確率で求めるプログラ厶です。<br>ターボモードで動かしてください。<br>YouTubeで調べてやってみました。<br>ビュフォンという人が、<br>平行線の幅のちょうど半分の長さの棒をランダムに投げると、平行線に触れたものの割合の逆数が円周率になる…<br>ということを発見したそうです。<br>というのをScratchで作りました。<br>詳しくは「ビュフォンの針」で調べてください。
+  tag: Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）
+  creator: ピョコ太郎
+  affiliation: 久留米,春日
+  img: 30.jpg
+  description: ビュフォンの針の仕組みはYouTubeの動画で調べました。<br>平行線に触れた棒を検出するとき、最初はScratchの「〇に触れたとき」を使っていたけどうまく円周率が求められなかったので、どうしてかなと思ったら、「〇に触れた時」がドットの刻みが大きいので、触れてなくても触れたように判定してしまうことが原因のようでした。<br>それで、三角関数を使って平行線に触れているかどうかを計算しました。<br>三角関数は全くわからなかったので、三角関数の図鑑を買ってもらって勉強しました。<br>すると、円周率3.14に近い値になりました。<br>※ターボモードで動かしてください。<br>
+  URL: https://scratch.mit.edu/projects/817844913
+  path_URL: 30
