大博覧会サムネイル追加、タグ変更

--- a/_data/exhibition.yml
+++ b/_data/exhibition.yml
@@ -310,7 +310,7 @@
 
 - title: ビュフォンの針
   text: ビュフォンの針という、円周率の近似値を確率で求めるプログラ厶です。<br>ターボモードで動かしてください。<br>YouTubeで調べてやってみました。<br>ビュフォンという人が、<br>平行線の幅のちょうど半分の長さの棒をランダムに投げると、平行線に触れたものの割合の逆数が円周率になる…<br>ということを発見したそうです。<br>というのをScratchで作りました。<br>詳しくは「ビュフォンの針」で調べてください。
-  tag: Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）
+  tag: Scratch
   creator: ピョコ太郎
   affiliation: 久留米,春日
   img: 30.jpg
