--- a/_data/exhibition.yml
+++ b/_data/exhibition.yml
@@ -338,3 +338,13 @@
   description: プログラミング教室で作っていたものを少し変えて作りました。<br>自分で考えて作りました。
   URL: https://scratch.mit.edu/projects/788033084/
   path_URL: 32
+
+- title: rainbow catの冒険　第7話
+  text: この作品は、とても長いアニメです。(17分30秒)そして最終回です。途中に迷路系のミニゲームがあります。他のscratcherが作ったもの(コスチュームなど)を多く使用しています。工夫したところは、(自作の)キャラクターなどの見た目(コスチュームなど)と、場面転換(一方...など)のタイミングと、ストーリーの意外性です。苦労したところは、戦闘シーンと、迷路系のミニゲームのときの背景です。少し強引なところもありましたが、「rainbow catの冒険」シリーズが無事に終われて良かったと思います。
+  tag: Scratch
+  creator: uniuna
+  affiliation: せんなん
+  img: 33.jpg
+  description: 特になし
+  URL: https://scratch.mit.edu/projects/720763603/
+  path_URL: 33
