かんづめ食堂にサイトへのリンクを追加

--- a/_data/exhibition.yml
+++ b/_data/exhibition.yml
@@ -300,7 +300,7 @@
   path_URL: 28
 
 - title: 『かんづめ食堂』オープン！！
-  text: 『かんづめ食堂』のウェブサイトを作りました。缶詰や非常食を使ったレシピを公開していくウェブサイトです。
+  text: 『<a href='http://food.starfree.jp/' target='_blank'>かんづめ食堂</a>』のウェブサイトを作りました。缶詰や非常食を使ったレシピを公開していくウェブサイトです。
   tag: Webサイト
   creator: YUZU
   affiliation: 梅田/西宮
