--- a/_data/countdown.yml
+++ b/_data/countdown.yml
@@ -24,6 +24,10 @@
 - title: '#7 CoderDojo屋台紹介'
   id: bzcAXB7zahA
   date: 2023.08.17
+- title: '#8 当日の案内'
+  id: ChuiP-HVxEc
+  date: 2023.08.24
+
 
 
   
