Fix missing coderdojo_at param in Data: 富山
> DojoCon Japan 2023の「ニンジャ大博覧会」にCoderDojo富山にも来てくれているハードスクラッチャーの子が作品紹介してくれています！
cf. https://www.facebook.com/coderdojo.toyama/posts/pfbid02JXJLu9Toic8hG21m5eF3rCDgR3qWP8UVsvju1aXpCAkcsHZdoR8Qcz79SwKACin5l

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -236,7 +236,7 @@
   tag: Scratch 
   second_tag: Webサイト
   creator: zss79
-  coderdojo_at: 
+  coderdojo_at: 富山
   note: SC Wars：にゃんこ大戦争 https://www.ponos.jp/
   url: https://drive.google.com/file/d/1n5AJfkBYEtcBRHdThvMJTJFvT2m-xoKW/view?usp=drive_link
 
