エラーがわからないので戻します。

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ twitter:  DojoConJapan
 facebook: DojoConJapan
 email:    dojocon2023@coderdojo.jp
 contact: https://forms.gle/oMy8aA3fM8iyy8cs7
-# https://dojocon-japan.doorkeeper.jp/events/160563
+registration: https://dojocon-japan.doorkeeper.jp/events/160563
 court: 奈良地方裁判所
 
 # Build settings
